# vpype-gscrib

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE-MIT  README.md  TODO.md  config-template.toml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: python-package.yml  python-publish.yml
docs/: cli.rst  conf.py  config.md  dev-guide.md  gcode-table.rst  index.rst  license.md  machine-modes.md  requirements.txt  user-guide.md
docs/_templates/: module.rst
mecode/: README.md
mecode/mecode/: __init__.py  core_builder.py  gcode_builder.py  gcode_state.py  main.py  matrix.py  printer.py  utils.py
samples/configs/: scenario-3d-printing-abs.toml  scenario-laser-engraving.toml  scenario-milling-coolant.toml  scenario-multi-tool.toml
testfiles/blocks/: footer.gcode  header.gcode
testfiles/configs/: config-blocks.toml  config-defaults.toml  config-layers.toml  config-units.toml  scenario-3d-printing-abs.toml  scenario-3d-printing-pla.toml  scenario-auto-leveling.toml  scenario-laser-cutting.toml  scenario-laser-engraving.toml  scenario-milling-coolant.toml  scenario-milling-metal.toml  scenario-milling-wood.toml  scenario-multi-tool.toml  scenario-pen-plotting.toml  scenario-plasma-cutting.toml  scenario-vinyl-cutting.toml
testfiles/heightmaps/: pyramid.csv
tests/: test_config_loader.py  test_gcode_builder.py  test_gcode_context.py  test_gcode_renderer.py  test_gcode_state.py  test_gcode_table.py  test_heightmap.py  test_plugin.py  test_raster_heightmap.py
tests/builder/: test_default_formatter.py  test_file_writer.py  test_gcode_builder.py  test_gcode_core.py  test_gcode_state.py  test_move_handlers.py  test_point.py  test_printrun_writer.py  test_serial_writer.py  test_socket_writer.py  test_trace_path.py  test_transformer.py
tests/config/: test_config_loader.py  test_config_option.py  test_options.py
tests/processor/: test_document_processor.py
tests/renderer/: test_gcode_context.py  test_gcode_renderer.py  test_raster_heightmap.py  test_sparse_heightmap.py
vpype_gscrib/: __init__.py  vpype_gscrib.py  vpype_options.py
vpype_gscrib/config/: base_config.py  builder_config.py  config_option.py  render_config.py
vpype_gscrib/gscrib/: __init__.py  gcode_builder.py  gcode_core.py  gcode_state.py  move_params.py  point.py  trace_path.py  transformer.py
vpype_gscrib/renderer/: gcode_context.py  gcode_renderer.py
vpype_mecode/: __init__.py  builder  vpype_mecode.py  vpype_options.py
vpype_mecode/builder/: __init__.py  config.py  gcode_builder.py  gcode_core.py  gcode_state.py  move_params.py  point.py  trace_path.py  transformer.py
vpype_mecode/codes/: __init__.py  gcode_entry.py  gcode_table.py  mappings.py
vpype_mecode/config/: __init__.py  base_config.py  builder_config.py  config_loader.py  config_option.py  mecode_config.py  render_config.py
vpype_mecode/enums/: plane.py  (+21 more)
(+198 files in other folders)
