[tool.poetry]
name = "vpype_gscrib"
version = "1.2.0"
description = "G-Code generator for Vpype"
authors = ["Joan Sala <contact@joansala.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/joansalasoler/vpype-gscrib"
repository = "https://github.com/joansalasoler/vpype-gscrib"
documentation = "https://vpype-gscrib.readthedocs.io"
keywords = ["Vpype", "G-code", "CNC", "3D printing", "CAM"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
gscrib = ">=1.2.0,<2.0"
numpy = ">=2.2.0,<3"
opencv-python = ">=4.10.0,<5.0"
pydantic = ">=2.8.0,<3.0"
pyserial = ">=3.5.0,<4.0"
scikit-image = ">=0.23.0,<1.0"
scipy = ">=1.14.0,<2.0"
typeguard = ">=4.3.0,<5.0"
vpype = ">=1.14.0,<2.0"

[tool.poetry.group.dev.dependencies]
mock = "~5.2.0"
pre-commit = "~4.2.0"
pylint = "~3.3.7"
pytest = "~8.4.1"
tox = "~4.32.0"

[tool.poetry.group.docs.dependencies]
vpython = "~7.6.0"
Sphinx = "~8.1.0"
sphinx-click = "~6.0.0"
sphinx-copybutton = "~0.5.2"
sphinx-rtd-theme = "~3.0.2"
sphinxcontrib-applehelp = "~2.0.0"
sphinxcontrib-devhelp = "~2.0.0"
sphinxcontrib-htmlhelp = "~2.1.0"
sphinxcontrib-jquery = "~4.1.0"
sphinxcontrib-jsmath = "~1.0.1"
sphinxcontrib-qthelp = "~2.0.0"
sphinxcontrib-serializinghtml = "~2.0.0"
myst-parser = "~4.0.1"

[tool.poetry.plugins."vpype.plugins"]
gscrib = "vpype_gscrib.vpype_gscrib:vpype_gscrib"

[build-system]
requires = ["poetry-core", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 80
src_paths = ["vpype_gscrib"]

[tool.pytest.ini_options]
typeguard-packages = "vpype_gscrib"

[tool.pylint]
ignore-paths = '^docs/.*$'

[tool.pylint.messages_control]
disable = ["C", "R"]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.typecheck]
generated-members = "cv.*"
